Fix link alignment on rtl pages

--- a/app/assets/stylesheets/components/_share-links.scss
+++ b/app/assets/stylesheets/components/_share-links.scss
@@ -55,6 +55,7 @@ $share-button-height: 25px;
     .app-c-share-links__link__icon {
       margin-right: 0;
       margin-left: $gutter-one-third;
+      vertical-align: middle;
     }
   }
 }
